grammar.js
    source_file: ($) => repeat($._statement),

    line_comment: (_) => token(seq("//", /.*/)),

    _statement: ($) =>
      choice($._expression_statement, $._declaration_statement),

    _expression: ($) =>
      prec.left(
        choice(
          $.build_in_call_expr,
          $.call_expression,
          $.await_expression,
          $.suspend_expression,
          $.resume_expression,
          $.index_expression,
          $.field_expression,
          $._expression_ending_with_block,
          $.struct_expression,
          $.struct_construction,
          $.anonymous_struct_enum,
          $.enum_expression,
          $.union_expression,
          $.error_expression,
          $.switch_expression,
          $.continue_expression,
          $.break_expression,
          $.return_expression,
          $.assignment_expression,
          $.array_expression,
          $.anonymous_array_expr,
          $.compound_assignment_expr,
          $.payload_expression,
          $.unary_expression,
          $.binary_expression,
          $.reference_expression,
          $.dereference_expression,
          $.orelse_postfix_expression,
          $.try_expression,
          $.range_pattern,
          $.unreachable_expression,
          $.usingnamespace_expression,
          $.defer_expression,
          $._type,
          $._literals,
          $.identifier
        )
      ),

    // Statements
    empty_statement: (_) => ";",

    assignment_statement: ($) =>
      seq(
        optional($.visibility_modifier),
        optional(
          alias(choice("threadlocal", "comptime"), $.assignment_modifier)
        ),
        choice("const", "var"),
        field("name", $.identifier),
        optional(seq(":", field("type", $._type))),
        "=",
        field("expression", $._expression),
        ";"
      ),

    function_signature: ($) =>
      seq(
        optional($.visibility_modifier),
        optional($.function_modifiers),
        "fn",
        field("name", $.identifier),
        field("parameters", $.parameters),
        optional(field("return", $._expression)),
        ";"
      ),

    function_declaration: ($) =>
      seq(
        optional($.visibility_modifier),
        optional($.function_modifiers),
        "fn",
        field("name", $.identifier),
        field("parameters", $.parameters),
        optional(field("return", $._expression)),
        field("body", $.block)
      ),

    visibility_modifier: (_) => choice("pub"),

    function_modifiers: ($) =>
      choice("export", "stdcallcc", "nakedcc", "inline", $.extern_modifier),

    extern_modifier: ($) => seq("extern", optional($.string_literal)),

    parameters: ($) => seq("(", sepBy(",", $.parameter), ")"),

    parameter: ($) =>
      seq(
        optional("comptime"),
        field("name", $.identifier),
        ":",
        field(
          "type",
          choice($._type, alias("var", $.inference_type), $.variadic_parameter)
        )
      ),

    build_in_call_expr: ($) =>
      prec(
        PREC.call,
        seq(
          field(
            "function",
            alias(/@[a-zA-Zα-ωΑ-Ωµ_][a-zA-Zα-ωΑ-Ωµ\d_]*/, $.identifier)
          ),
          field("arguments", $.arguments)
        )
      ),

    call_expression: ($) =>
      prec(
        PREC.call,
        seq(
          optional(alias("async", $.call_modifier)),
          field("function", $.identifier),
          field("arguments", $.arguments)
        )
      ),

    arguments: ($) => seq("(", sepBy(",", $._expression), ")"),

    field_expression: ($) =>
      prec.left(
        PREC.call,
        seq(
          field("value", $._expression),
          ".",
          field(
            "field",
            choice(alias($.identifier, $.field_identifier), $._expression)
          )
        )
      ),

    _type: ($) =>
      prec(
        -1,
        choice(
          $.primitive_type,
          $.optional_type,
          $.pointer_type,
          $.error_type,
          $.array_type,
          $._type_field_expression,
          $.custom_number_type,
          alias($._struct_standalone, $.struct_expression),
          alias($.identifier, $.type_identifier)
        )
      ),

    primitive_type: (_) => choice(...primitive_types),

    optional_type: ($) => prec(PREC.optional, seq("?", $._type)),

    array_type: ($) =>
      prec(
        PREC.array,
        seq(
          repeat(
            seq(
              "[",
              field(
                "size",
                optional(
                  choice(
                    $.integer_literal,
                    alias($.identifier, $.identifier),
                    alias(seq("*", optional("c")), $.pointer)
                  )
                )
              ),
              "]"
            )
          ),
          optional(repeat($.type_prefix)),
          // Cannot be another array type, since the sintax already cover
          // muldimentional arrays
          choice(
            $.primitive_type,
            $.optional_type,
            $.pointer_type,
            $.error_type,
            $.custom_number_type,
            alias($.identifier, $.type_identifier)
          )
        )
      ),

    pointer_type: ($) =>
      prec.left(seq("*", optional(repeat($.type_prefix)), $._type)),

    block: ($) =>
      prec.left(
        seq(
          optional(field("label", $.loop_label)),
          "{",
          optional(repeat($._statement)),
          optional($._expression),
          "}"
        )
      ),

    anonymous_array_expr: ($) =>
      seq(
        ".{",
        field("values", alias(sepBy(",", $._expression), $.array_values)),
        "}"
      ),

    integer_literal: (_) =>
      token(seq(choice(/[0-9]+/, /0x[0-9a-fA-F]+/, /0b[01]+/, /0o[0-7]+/))),

    float_literal: (_) => {
      const decimal = /[0-9][0-9_]*/;
      const hexadecimal = /[0-9a-fA-F][0-9a-fA-F_]*/;
      return token(
        seq(
          choice(
            seq(/0[xX]/, hexadecimal, optional("."), optional(hexadecimal)),
            seq(decimal, optional("."), optional(decimal))
          ),
          optional(/[eEpP][+-]?\d+/)
        )
      );
    },

    string_literal: ($) =>
      seq(
        '"',
        repeat(choice($.escape_sequence, /[^"\\]+/)),
        token.immediate('"')
      ),

    null_literal: (_) => "null",

    undefined_literal: (_) => "undefined",

    identifier: ($) => choice($._str_identifier, $._identifier_text),

    _str_identifier: ($) =>
      seq(
        '@"',
        alias(repeat(choice($.escape_sequence, /[^"\\]+/)), $.string_literal),
        token.immediate('"')
      ),

    _identifier_text: (_) => /[a-zA-Zα-ωΑ-Ωµ_][a-zA-Zα-ωΑ-Ωµ\d_]*/,
  },
});

function sepBy1(sep, rule) {
  return seq(rule, repeat(seq(sep, rule)), optional(sep));
}

function sepBy(sep, rule) {
  return optional(sepBy1(sep, rule));
}
